[package]
name = "edict"
version = "0.7.0"
edition = "2021"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/edict"
homepage = "https://github.com/zakarumych/edict"
repository = "https://github.com/zakarumych/edict"
readme = "README.md"
description = "Experimental entity-component-system library"
keywords = ["ecs", "entity"]
categories = ["no-std", "game-development", "data-structures"]

[features]
std = ["serde?/std", "alkahest?/std"]
default = ["std"]

[dependencies]
edict-proc = { version = "=0.6.0", path = "proc" }
amity = "0.2"
hashbrown = { version = "0.14" }
smallvec = { version = "1.10", features = ["union"], default-features = false }
tiny-fn = "0.1.5"
atomicell = "0.2"
rayon = { version = "1.7", optional = true }
alkahest = { version = "0.3.0", optional = true, features = [
    "alloc",
    "fixed32",
], default-features = false }
nanoserde = { version = "0.1.32", optional = true, default-features = false }
serde = { version = "1.0", optional = true, default-features = false, features = [
    "alloc",
] }
parking_lot = "0.12"
slab = "0.4"

[dev-dependencies]
alkahest-proc = { version = "0.3.0" }

[workspace]
members = ["proc-lib", "proc"]

[[example]]
name = "allocate"
required-features = ["std"]

[[example]]
name = "schedule"
required-features = ["std"]
