[package]
name = "edict-proc-lib"
version = "0.5.0"
edition = "2021"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/edict"
homepage = "https://github.com/zakarumych/edict"
repository = "https://github.com/zakarumych/edict"
readme = "../README.md"
description = "Procedural macros library for edict"

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-easy = { version = "0.3.0" }
