[package]
name = "edict-proc"
version = "0.4.0-rc.4"
edition = "2021"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/edict"
homepage = "https://github.com/zakarumych/edict"
repository = "https://github.com/zakarumych/edict"
readme = "../README.md"
description = "Procedural macros for edict"

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
edict-proc-lib = { version = "=0.4.0-rc.4", path = "../proc-lib" }
