[package]
name = "edict-proc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
edict-proc-lib = { version = "=1.0.0-rc3", path = "../proc-lib" }
